--- a/lib/canonical/launchpad/icing/style.css
+++ b/lib/canonical/launchpad/icing/style.css
@@ -274,6 +274,10 @@ hr {
   font-weight: bold;
   color: #FFF;
 }
+ul#menuroot a#homebreadcrumb span {
+  background: url(home.gif) left center no-repeat;
+  padding-left: 20px;
+}
 /* The location bar contains menus. */
 ul#menuroot {
   display: inline;
@@ -291,7 +295,7 @@ ul#menuroot li {
  * Negative right margin for breadcrumbs.
  * This is part of how we make them look like arrows.
  */
-ul#menuroot>li>a {
+ul#menuroot a.breadcrumb {
   position: relative;
   background-image: url(locationbar_a_bg.gif);
   background-repeat: no-repeat;
@@ -326,7 +330,7 @@ ul#menuroot>li>a {
   color: #83AD23;
 }
 /* XXX: needs explanation */
-ul#menuroot>li>a>em { /* should be changed to not need em */
+ul#menuroot a.breadcrumb em { /* should be changed to not need em */
   font-style: normal;
   float: left;
   display: block;
@@ -338,7 +342,7 @@ ul#menuroot>li>a>em { /* should be changed to not need em */
   cursor: pointer;
 }
 /* When a breadcrumb has a submenu, show a down-arrow. */
-ul#menuroot>li.container>a>em { /* should be changed to not need em */
+ul#menuroot a.container.breadcrumb em { /* should be changed to not need em */
   background-image: url(locationbar_em_bg.gif);
 }
 /* Undo more generic formatting around ul elements. */
@@ -390,13 +394,13 @@ ul#menuroot>li.container>a>em { /* should be changed to not need em */
  * on mouse-over.
  * The colour #EEE is sometimes used for debugging.
  */
-#locationbar ul.menu li>a:hover {
+#locationbar ul#rootmenu ul.menu li a:hover {
   /* color: #EEE; */
 }
 /* Set the appearance of dyn menu items other than the breadcrumbs
  * when selected and potentially opened.
  */
-#locationbar ul.menu li.selected>a {
+#locationbar ul#rootmenu ul.menu li.selected a {
   background-color: #C8EF48;
   color: #000;
 }
@@ -405,12 +409,12 @@ ul#menuroot>li.container>a>em { /* should be changed to not need em */
  * they look right during the deliberate delay between being
  * moused-over and actually activated.
  */
-ul#menuroot>li>a:hover {
+ul#menuroot li a.breadcrumb:hover {
   background-position: 0px 0px;
   color: #000;
 }
 /* Set the appearance of breadcrumb items when selected for opening. */
-ul#menuroot>li.selected>a {
+ul#menuroot li.selected a.breadcrumb {
   background-position: 0px 0px;
   color: #000;
 }
@@ -419,7 +423,7 @@ ul#menuroot>li.selected>a {
  *
  * Does not include the breadcrumbs.
  */
-#locationbar ul.menu li.container>a {
+#locationbar ul.menu a.container {
   background-image: url(/@@/arrowRight);
   background-repeat: no-repeat;
   background-position: center right;
