Add possibility to go from one tour to the next.

--- a/lib/canonical/launchpad/templates/marketing-blueprints-tour.xml
+++ b/lib/canonical/launchpad/templates/marketing-blueprints-tour.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<tour>
+<tour next="translations">
   <title>Blueprints</title>
   <screen>
     <title>Viewing a blueprint</title>
