--- a/lib/canonical/launchpad/icing/style.css
+++ b/lib/canonical/launchpad/icing/style.css
@@ -242,6 +242,7 @@ hr {
 #globalheader .sitemessage {
   position: absolute;
   top: 2px;
+  left: 10px;
   display: inline;
   color: #FFF;
   font-size: 13px;
