--- a/lib/canonical/launchpad/templates/marketing-bugs-tour.xml
+++ b/lib/canonical/launchpad/templates/marketing-bugs-tour.xml
@@ -24,17 +24,19 @@
       who is working on the bug and what discussion has taken place.
     </summary>
     <screenshot>/+icing/bugs-tour-screenshot2.png</screenshot>
-    <callout top="" left="">You can track a bug's status across different
+    <callout top="86" left="280">You can track a bug's status across different
       communities, even if they use external bug trackers.
     </callout>
-    <callout top="" left="">See which individual or team each community has
-      assigned to work on a bug. Or link to the bug in an external tracker.
+    <callout top="117" left="450">See which individual or team each community
+      has assigned to work on a bug. Or link to the bug in an external
+      tracker.
     </callout>
-    <callout top="" left="">If other projects or distributions are affected by
-      this bug, sharing it with them takes just a few clicks.
+    <callout top="237" left="440">If other projects or distributions are
+      affected by this bug, sharing it with them takes just a few clicks.
     </callout>
-    <callout top="" left="">Any Launchpad user or team can subscribe to a bug,
-      giving them email notification of status changes and new comments.
+    <callout top="214" left="72">Any Launchpad user or team can subscribe to
+      a bug, giving them email notification of status changes and new
+      comments.
     </callout>
   </screen>
 
@@ -44,14 +46,14 @@
     <summary>A project's bug listing gives a quick overview of how many issues
       are outstanding.
     </summary>
-    <callout top="" left="">Coloured bug icons make it easy to see how
+    <callout top="113" left="122">Coloured bug icons make it easy to see how
       important the project considers each bug to be.
     </callout>
-    <callout top="" left="">A yellow Bazaar icon shows that a bug is linked to
-      a branch of code that is intended to fix it.
+    <callout top="152" left="307">A yellow Bazaar icon shows that a bug is
+      linked to a branch of code that is intended to fix it.
     </callout>
-    <callout top="" left="">Tags help communities spontaneously categorise
-      their bugs.
+    <callout top="172" left="74">Tags help communities spontaneously
+      categorise their bugs.
     </callout>
   </screen>
 
@@ -60,12 +62,12 @@
     <screenshot>/+icing/bugs-tour-screenshot4.png</screenshot>
     <summary>Launchpad makes it easy to keep bug reports up to date.</summary>
 
-    <callout top="" left="">Each community affected by a bug can choose
+    <callout top="44" left="118">Each community affected by a bug can choose
       their own assignee and status, but all communities share the same
       comment history.
     </callout>
-    <callout top="" left="">Quick-links to that community's bug contact and
-      the current user, speed up bug assignment.
+    <callout top="145" left="70">Quick-links to that community's bug contact
+      and the current user, speed up bug assignment.
     </callout>
   </screen>
 
@@ -74,15 +76,11 @@
     <screenshot>/+icing/bugs-tour-screenshot5.png</screenshot>
     <summary>Shared comment histories helps communities solve common bugs.</summary>
 
-    <callout top="" left="">Bug comments can have subjects, to make long
+    <callout top="0" left="356">Bug comments can have subjects, to make long
       comment histories easier to scan.
     </callout>
-    <callout top="" left="">Attachments - such as screen shots, code patches
-      or logs - make comments much more useful.
-    </callout>
-
-    <callout top="" left="">This comment was filed by email, using
-      Launchpad's extensive email interface.
+    <callout top="23" left="185">Attachments - such as screen shots, code
+      patches or logs - make comments much more useful.
     </callout>
   </screen>
 
