--- a/lib/canonical/launchpad/icing/style.css
+++ b/lib/canonical/launchpad/icing/style.css
@@ -279,12 +279,12 @@ hr {
  * "Home".
  */
 ul#menuroot a#homebreadcrumb span {
-  background: url(home.gif) left top no-repeat;
+  background: url(home-low-high.gif) left top no-repeat;
   padding-left: 16px;
 }
 ul#menuroot li a#homebreadcrumb:hover span,
 ul#menuroot li.selected a#homebreadcrumb span {
-  background: url(home-highlight.gif) left top no-repeat;
+  background: url(home-low-high.gif) -1014px top no-repeat;
   padding-left: 16px;
 }
 /* The location bar contains menus. */
