--- a/lib/canonical/launchpad/icing/marketing-style.css
+++ b/lib/canonical/launchpad/icing/marketing-style.css
@@ -26,13 +26,102 @@ body {
 	padding-bottom: 30px;
 }
 
+/* Begin definitions copied from style.css */
+
+/* All pages begin with a global header or a topline. */
+#globalheader {
+  position: relative;
+  width: 100%;
+  height: 21px;
+  overflow: hidden;
+  margin: 0;
+  background-color: #EEE;
+  background-image:  url(globalheader_bg.gif);
+  background-repeat: repeat-x;
+  background-position: top center;
+}
+/* Home icon and link. */
+#globalheader a.home {
+  display: block;
+  margin: 0;
+  padding: 0;
+}
+#globalheader .sitemessage a {
+  color: #FFF;
+  text-decoration: underline;
+}
+/* Site-specific message. */
+#globalheader .sitemessage {
+  position: absolute;
+  top: 2px;
+  left: 10px;
+  display: inline;
+  color: #FFF;
+  font-size: 13px;
+}
+/* Small launchpad icon and rasterized text. */
+#globalheader img.launchpad {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+/* End definitions copied from style.css */
+
 #breadcrumb {
-  height: 27px;
-  padding: 22px 10px 0 10px;
-  background: #A0D719 url(bg-breadcrumb.gif) top left repeat-x;
-  text-align: left;
-  margin-bottom: 20px;
-  font-size: 1.1em;
+    height: 27px;
+    background: #AFDB1F url(bg-breadcrumb.gif) top left repeat-x;
+    text-align: left;
+    margin-bottom: 20px;
+    font-size: 11px;
+    font-weight: bold;
+}
+
+#breadcrumb dl dt,
+#breadcrumb dl dd {
+    display: inline;
+    height: 27px;
+    line-height: 25px;
+}
+
+#breadcrumb dl dt {
+    float: left;
+    margin-right: 15px;
+    margin-left: 10px;
+    color: #fff;
+}
+
+#breadcrumb dl dd ul {
+    display: inline;
+}
+
+#breadcrumb dl dd ul li {
+    display: block;
+    white-space: nowrap;
+    float: left;
+}
+
+#breadcrumb dl dd ul li.current {
+    display: block;
+    height: 27px;
+    line-height: 25px;
+    padding: 0 25px 0 5px;
+    background: url(bread-a2i.gif) top right no-repeat;
+    color: #000;
+}
+
+#breadcrumb dl dd ul li a {
+    display: block;
+    height: 27px;
+    line-height: 25px;
+    padding: 0 25px 0 5px;
+    background: url(bread-i2a.gif) top right no-repeat;
+    color: #000;
+    text-decoration: none;
+}
+
+#breadcrumb dl dd ul li a:hover {
+  text-decoration: underline;
 }
 
 #wrapper {
@@ -75,76 +164,6 @@ body {
   background: url(bg-footer.gif) top left no-repeat;
   color: #fff;
 }
-
-#breadcrumb dl dt,
-#breadcrumb dl dd {
-  display: inline;
-  height: 27px;
-  line-height: 25px;
-}
-
-#breadcrumb dl dt {
-  float: left;
-  margin-right: 15px;
-  color: #fff;
-  font-weight: bold;
-  text-shadow: 0 0 0 #A2D815;
-}
-
-#breadcrumb dl dd ul {
-	margin-left: 0;
-	padding-left: 0;
-	display: inline;
-	border: none;
-}
-
-#breadcrumb dl dd ul li {
-	display: block;
-	white-space: nowrap;
-	float: left;
-}
-
-#breadcrumb dl dd ul li.current {
-  display: block;
-  height: 27px;
-  line-height: 25px;
-  padding: 0 25px 0 5px;
-  background: url(bread-a2i.gif) top right no-repeat;
-  color: #000;
-}
-
-#breadcrumb dl dd ul li a {
-  display: block;
-  height: 27px;
-  line-height: 25px;
-  padding: 0 25px 0 5px;
-  background: url(bread-i2a.gif) top right no-repeat;
-  color: #000;
-  text-decoration: none;
-}
-
-#breadcrumb dl dd ul li a:hover,
-#breadcrumb dl dd ul#home-breadcrumbs li a:hover {
-  text-decoration: underline;
-}
-
-#breadcrumb dl dd ul#home-breadcrumbs li a {
-  display: block;
-  height: 27px;
-  line-height: 25px;
-  padding: 0 25px 0 5px;
-  background: url(bread-i2i.gif) top right no-repeat;
-  color: #000;
-  text-decoration: none;
-}
-
-#breadcrumb dl dd ul li a:hover {
-  text-decoration: underline;
-}
-
-
-/* h1
-################################################ */
 
 #header h1 { float: left; }
 
