--- a/lib/canonical/launchpad/icing/marketing-style.css
+++ b/lib/canonical/launchpad/icing/marketing-style.css
@@ -214,7 +214,9 @@ padding-top: 27px;
   font-weight: bold;
 }
 
-#header dl#navigation ul li a:hover {
+#header dl#navigation ul li a:hover,
+#header dl#navigation ul li a.current
+ {
   background-position: top left;
   color: #454545;
 }
